[package]
name = "mditty"
version = "0.1.0"
authors = ["William Gasper <wkg@williamgasper.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
